Added labels to squares

--- a/BodyIndexBasics-Neoplastic-2/MainWindow.xaml
+++ b/BodyIndexBasics-Neoplastic-2/MainWindow.xaml
@@ -14,34 +14,73 @@
 
     </Window.Resources>
     <Grid Margin="0,0,3.6,2" RenderTransformOrigin="0.479,0.705">
+
+
+
+        <TextBox x:Name="statusTitleText" HorizontalAlignment="Left" Height="21" Margin="450,5,0,0" TextWrapping="Wrap" Text="Sensor Status:" VerticalAlignment="Top" Width="109" TextAlignment="Center"/>
+        <TextBox x:Name="statusTextBox" HorizontalAlignment="Left" Height="21" Margin="559,5,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="127" FontSize="10" />
+
+        <TextBox x:Name="regionTitleText" HorizontalAlignment="Left" Height="21" Margin="731,5,0,0" TextWrapping="Wrap" Text="Region X-Y-Z:" VerticalAlignment="Top" Width="116" TextAlignment="Center"/>
+        <TextBox x:Name="regionText" HorizontalAlignment="Left" Height="21" Margin="847,5,0,0" TextWrapping="Wrap" Text="{Binding XYZregion}" VerticalAlignment="Top" Width="131" TextAlignment="Center"/>
+
+
         <Rectangle x:Name="regionColorRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="360" Margin="18,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="638" StrokeThickness="9"/>
-
-
-
-
-        <TextBox x:Name="statusTitleText" HorizontalAlignment="Left" Height="27" Margin="450,5,0,0" TextWrapping="Wrap" Text="Sensor Status:" VerticalAlignment="Top" Width="109" TextAlignment="Center"/>
-        <TextBox x:Name="statusTextBox" HorizontalAlignment="Left" Height="27" Margin="559,5,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="127" FontSize="10" />
-
-        <TextBox x:Name="regionTitleText" HorizontalAlignment="Left" Height="27" Margin="731,5,0,0" TextWrapping="Wrap" Text="Region X-Y-Z:" VerticalAlignment="Top" Width="116" TextAlignment="Center"/>
-        <TextBox x:Name="regionText" HorizontalAlignment="Left" Height="27" Margin="847,5,0,0" TextWrapping="Wrap" Text="{Binding XYZregion}" VerticalAlignment="Top" Width="131" TextAlignment="Center"/>
+        <TextBox x:Name="regionIntextBox" HorizontalAlignment="Left" Height="105" Margin="166,174,0,0" TextWrapping="Wrap" Text="Region" VerticalAlignment="Top" Width="304" FontSize="64" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
 
         <Rectangle x:Name="sidewaysMvmtRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="95" Margin="647,37,0,0" VerticalAlignment="Top" Width="331" RenderTransformOrigin="1,1" StrokeThickness="20" Stroke="Black"/>
-        <Rectangle x:Name="verticalMvmtRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="310" Margin="1313,36,0,0" VerticalAlignment="Top" Width="207" Stroke="Black" StrokeThickness="17"/>
+        <TextBox x:Name="sidewaysMvmttextBox" HorizontalAlignment="Left" Height="74" Margin="698,45,0,0" TextWrapping="Wrap" Text="Horizontal" VerticalAlignment="Top" Width="238" FontSize="50" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
 
-        <Rectangle x:Name="handLeftSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="329" Margin="647,119,0,0" VerticalAlignment="Top" Width="322" Stroke="Black" StrokeThickness="22"/>
-        <Rectangle x:Name="footLeftSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="310" Margin="969,36,0,0" VerticalAlignment="Top" Width="344" StrokeThickness="20" Stroke="Black"/>
-        <Rectangle x:Name="handRightSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="97" Margin="1128,346,0,0" VerticalAlignment="Top" Width="392" Stroke="Black" StrokeThickness="15"/>
-        <Rectangle x:Name="footRightSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="112" Margin="969,336,0,0" VerticalAlignment="Top" Width="159" Stroke="Black" StrokeThickness="11"/>
+        <Rectangle x:Name="verticalMvmtRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="310" Margin="1313,36,0,0" VerticalAlignment="Top" Width="207" Stroke="Black" StrokeThickness="17"/>
+        <TextBox x:Name="verticalMvmttextBox" HorizontalAlignment="Left" Height="74" Margin="1313,148,0,0" TextWrapping="Wrap" Text="Vertical" VerticalAlignment="Top" Width="200" FontSize="50" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
+        <Rectangle x:Name="handLeftSweepXRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="212" Margin="647,124,0,0" VerticalAlignment="Top" Width="322" Stroke="Black" StrokeThickness="22"/>
+        <Rectangle x:Name="handLeftSweepYRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="112" Margin="652,336,0,0" VerticalAlignment="Top" Width="322" Stroke="Black" StrokeThickness="22"/>
+        <TextBox x:Name="handLeftSweepYtextBox" HorizontalAlignment="Left" Height="69" Margin="688,369,0,0" TextWrapping="Wrap" Text="Left Hand Y Sweep" VerticalAlignment="Top" Width="248" FontSize="28" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+        <TextBox x:Name="handLeftSweepXtextBox" HorizontalAlignment="Left" Height="112" Margin="716,159,0,0" TextWrapping="Wrap" Text="Left Hand X Sweep" VerticalAlignment="Top" Width="200" FontSize="40" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
+        <Rectangle x:Name="footLeftSweepXRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="310" Margin="969,36,0,0" VerticalAlignment="Top" Width="254" StrokeThickness="20" Stroke="Black"/>
+        <TextBox x:Name="footLeftSweepXtextBox" HorizontalAlignment="Left" Height="112" Margin="998,116,0,0" TextWrapping="Wrap" Text="Left Foot Sweep" VerticalAlignment="Top" Width="200" FontSize="40" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+        <Rectangle x:Name="footLeftSweepYRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="185" Margin="1203,37,0,0" VerticalAlignment="Top" Width="110" StrokeThickness="20" Stroke="Black"/>
+        <TextBox x:Name="footLeftSweepYtextBox" HorizontalAlignment="Left" Height="105" Margin="1223,75,0,0" TextWrapping="Wrap" Text="Left Foot Y Sweep" VerticalAlignment="Top" Width="71" FontSize="22" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
+        <Rectangle x:Name="handRightSweepXRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="97" Margin="1128,346,0,0" VerticalAlignment="Top" Width="288" Stroke="Black" StrokeThickness="15"/>
+        <TextBox x:Name="handRightSweepXtextBox" HorizontalAlignment="Left" Height="39" Margin="1143,369,0,0" TextWrapping="Wrap" Text="Right Hand X Sweep" VerticalAlignment="Top" Width="260" FontSize="28" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+        <Rectangle x:Name="handRightSweepYRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="97" Margin="1416,346,0,0" VerticalAlignment="Top" Width="104" Stroke="Black" StrokeThickness="15"/>
+        <TextBox x:Name="handRightSweepYtextBox" HorizontalAlignment="Left" Height="68" Margin="1433,360,0,0" TextWrapping="Wrap" Text="Right Hand Y Sweep" VerticalAlignment="Top" Width="74" FontSize="16" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
+        <Rectangle x:Name="footRightXSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="112" Margin="969,336,0,0" VerticalAlignment="Top" Width="159" Stroke="Black" StrokeThickness="11"/>
+        <TextBox x:Name="footRightSweepXtextBox" HorizontalAlignment="Left" Height="97" Margin="974,351,0,0" TextWrapping="Wrap" Text="Right Foot X Sweep" VerticalAlignment="Top" Width="149" FontSize="28" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+        <Rectangle x:Name="footRightYSweepRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="137" Margin="1223,209,0,0" VerticalAlignment="Top" Width="90" Stroke="Black" StrokeThickness="11"/>
+        <TextBox x:Name="footRightSweepYtextBox" HorizontalAlignment="Left" Height="86" Margin="1228,236,0,0" TextWrapping="Wrap" Text="Right Foot Y Sweep" VerticalAlignment="Top" Width="80" FontSize="20" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
 
         <Rectangle x:Name="rightHandRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="446" Margin="18,391,0,0"  VerticalAlignment="Top" Width="440" StrokeThickness="25" Stroke="Black"/>
+        <TextBox x:Name="handRighttextBox" HorizontalAlignment="Left" Height="71" Margin="39,575,0,0" TextWrapping="Wrap" Text="Right Hand" VerticalAlignment="Top" Width="390" FontSize="40" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
+
         <Rectangle x:Name="leftHandRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="394" Margin="1066,443,0,0" VerticalAlignment="Top" Width="454" Stroke="Black" StrokeThickness="15"/>
+        <TextBox x:Name="handLefttextBox" HorizontalAlignment="Left" Height="71" Margin="1100,603,0,0" TextWrapping="Wrap" Text="Left Hand" VerticalAlignment="Top" Width="390" FontSize="40" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
 
         <Rectangle x:Name="velocityRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="52" Margin="458,391,0,0"  VerticalAlignment="Top" Width="198" StrokeThickness="6" Stroke="Black"/>
+        <TextBox x:Name="velocitytextBox" HorizontalAlignment="Left" Height="51" Margin="437,397,0,0" TextWrapping="Wrap" Text="Velocity" VerticalAlignment="Top" Width="219" FontSize="30" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
+
 
         <Rectangle x:Name="orientationRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="394" Margin="450,443,0,0" VerticalAlignment="Top" Width="620" StrokeThickness="13" Stroke="Black"/>
+        <TextBox x:Name="orientationtextBox" HorizontalAlignment="Left" Height="71" Margin="579,588,0,0" TextWrapping="Wrap" Text="Orientation" VerticalAlignment="Top" Width="390" FontSize="40" TextAlignment="Center" Foreground="#FFB2ACAC" Background="#00FFFFFF" BorderThickness="0"/>
 
-        <TextBox x:Name="timeTitleText" HorizontalAlignment="Left" Height="27" Margin="1015,5,0,0" TextWrapping="Wrap" Text="Timer: " VerticalAlignment="Top" Width="51" TextAlignment="Center"/>
-        <TextBox x:Name="timeText" HorizontalAlignment="Left" Height="26" Margin="1066,5,0,0" TextWrapping="Wrap" Text="{Binding timerValue}" VerticalAlignment="Top" Width="77" TextAlignment="Center"/>
+
+        <TextBox x:Name="timeTitleText" HorizontalAlignment="Left" Height="21" Margin="1015,5,0,0" TextWrapping="Wrap" Text="Timer: " VerticalAlignment="Top" Width="51" TextAlignment="Center"/>
+        <TextBox x:Name="timeText" HorizontalAlignment="Left" Height="21" Margin="1066,5,0,0" TextWrapping="Wrap" Text="{Binding timerValue}" VerticalAlignment="Top" Width="77" TextAlignment="Center"/>
 
 
 
@@ -53,6 +92,9 @@
         <Viewbox Grid.Row="1" HorizontalAlignment="Left">
             <Image Source="{Binding ImageSource}" Stretch="UniformToFill" />
         </Viewbox>
+        <Rectangle x:Name="testRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="26" Margin="1366,5,0,0" Stroke="Black" VerticalAlignment="Top" Width="77"/>
+        <Button x:Name="timerResetButton" Content="Reset Time" HorizontalAlignment="Left" Height="21" Margin="1172,5,0,0" VerticalAlignment="Top" Width="74" Background="WhiteSmoke" Click="timerResetButton_Click"/>
+
 
 
 
