--- a/BodyIndexBasics-Neoplastic-5/MainWindow.xaml
+++ b/BodyIndexBasics-Neoplastic-5/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Microsoft.Samples.Kinect.BodyIndexBasics.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Mondrian 1" 
+        Title="Graphic Impulse" 
         Height="873.695" Width="1537.792" 
         Closing="MainWindow_Closing">
     <Window.Resources>
@@ -22,9 +22,6 @@
 
         <TextBox x:Name="statusTitleText" HorizontalAlignment="Left" Height="21" Margin="450,5,0,0" TextWrapping="Wrap" Text="Sensor Status:" VerticalAlignment="Top" Width="109" TextAlignment="Center"/>
         <TextBox x:Name="statusTextBox" HorizontalAlignment="Left" Height="21" Margin="559,5,0,0" TextWrapping="Wrap" Text="{Binding StatusText}" VerticalAlignment="Top" Width="127" FontSize="10" />
-
-        <TextBox x:Name="regionTitleText" HorizontalAlignment="Left" Height="21" Margin="731,5,0,0" TextWrapping="Wrap" Text="Region X-Y-Z:" VerticalAlignment="Top" Width="116" TextAlignment="Center"/>
-        <TextBox x:Name="regionText" HorizontalAlignment="Left" Height="21" Margin="847,5,0,0" TextWrapping="Wrap" Text="{Binding XYZregion}" VerticalAlignment="Top" Width="131" TextAlignment="Center"/>
 
 
         <Rectangle x:Name="xregionColorRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="248" Margin="450,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="197" StrokeThickness="9"/>
@@ -97,16 +94,16 @@
         <Viewbox Grid.Row="1" HorizontalAlignment="Left">
             <Image Source="{Binding ImageSource}" Stretch="Fill" />
         </Viewbox>
-
-        <Rectangle x:Name="testRect" Fill="#FFFFFFFF" HorizontalAlignment="Left" Height="26" Margin="1443,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="77"/>
         <Button x:Name="timerResetButton" Content="Reset Time" HorizontalAlignment="Left" Height="21" Margin="1172,5,0,0" VerticalAlignment="Top" Width="74" Background="WhiteSmoke" Click="timerResetButton_Click"/>
+        <Button x:Name="timerStartButton" Content="Start" HorizontalAlignment="Left" Height="21" Margin="1259,5,0,0" VerticalAlignment="Top" Width="74" Background="WhiteSmoke" Click="timerStartButton_Click" />
+        <Button x:Name="showLabelsButton" Content="Show Labels" HorizontalAlignment="Left" Height="21" Margin="1366,5,0,0" VerticalAlignment="Top" Width="68" Background="#FFF4F4F4" Click="showLabelsButton_Click"/>
+        <Button x:Name="hideLabelsButton" Content="Hide Labels" HorizontalAlignment="Left" Height="21" Margin="1434,5,0,0" VerticalAlignment="Top" Width="73" Background="#FFF4F4F4" IsDefault="True" Click="hideLabelsButton_Click"/>
 
-        <Button x:Name="showLabelsButton" Content="Show Labels" HorizontalAlignment="Left" Height="21" Margin="1270,5,0,0" VerticalAlignment="Top" Width="68" Background="#FFF4F4F4" Click="showLabelsButton_Click"/>
-        <Button x:Name="hideLabelsButton" Content="Hide Labels" HorizontalAlignment="Left" Height="21" Margin="1343,5,0,0" VerticalAlignment="Top" Width="73" Background="#FFF4F4F4" IsDefault="True" Click="hideLabelsButton_Click"/>
 
 
+        <Canvas x:Name="myCanvas" HorizontalAlignment="Left" Height="873" Margin="0,-31,-0.4,0" VerticalAlignment="Top" Width="1537">
 
-        <Canvas x:Name="myCanvas" HorizontalAlignment="Left" Height="873" Margin="0,-31,-0.4,0" VerticalAlignment="Top" Width="1537"/>
+        </Canvas>
 
     </Grid>
 </Window>
